[package]
name = "tracing-distributed"
version = "0.3.1"
authors = [
    "Inanna Malick <inanna@recursion.wtf>",
    "Jeremiah Senkpiel <fishrock123@rocketmail.com>"
]
edition = "2018"
description = "Tracing layer for multiprocess telemetry"
repository = "https://github.com/eaze/tracing-honeycomb"
keywords = ["tracing", "instrumentation"]
license = "MIT"
readme = "README.md"

[features]
use_parking_lot = ["parking_lot"]

[dependencies]
tracing = "0.1.12"
tracing-core = "0.1.9"
tracing-subscriber = "0.3"
itertools = "0.9"
parking_lot = { version = "0.11", optional = true }

[dev-dependencies]
tracing-attributes = "0.1.5"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
tokio = { version = "0.2", features = ["full"] }
tracing-futures = "0.2.1"
