[package]
name = "eaze-tracing-honeycomb"
version = "0.2.1-eaze.7"
authors = [
    "Inanna Malick <inanna@recursion.wtf>",
    "Jeremiah Senkpiel <fishrock123@rocketmail.com>"
]
edition = "2018"
description = "Honeycomb.io tracing layer for multiprocess telemetry"
documentation = "https://inanna-malick.github.io/tracing-honeycomb/tracing_honeycomb/"
repository = "https://github.com/inanna-malick/tracing-honeycomb"
keywords = ["tracing", "honeycomb", "instrumentation"]
license = "MIT"
readme = "README.md"

[features]
use_parking_lot = ["parking_lot", "eaze-tracing-distributed/use_parking_lot"]

[dependencies]
tracing = "0.1.12"
tracing-core = "0.1.9"
eaze-tracing-distributed =  { path = "../tracing-distributed", version = "0.2.0-eaze.7" }
libhoney-rust = "0.1.3"
rand = "0.7"
chrono = "0.4"
parking_lot = { version = "0.11", optional = true }
uuid = { version = "0.8", features = ["v4"] }
sha-1 = "0.9"

[dev-dependencies]
tracing-attributes = "0.1.5"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
tracing-subscriber = "0.2.0"
tokio = { version = "0.2", features = ["full"] }
tracing-futures = "0.2.1"
proptest = "0.9.5"
